--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,66 @@
 body {
-    background-color: beige;
+    background-image: url('/static/img/periodico2.jpg');
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
 }
 
 img {
-    width: 400px;
+    max-width: 100%;
     height: auto;
+    display: block;
+    margin: 0 auto 10px;
+}
+
+h1 {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.grid-container {
+    display: grid;
+    grid-gap: 20px;
+    padding: 20px;
+    background-color: ;
+}
+
+.grid-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgb(161, 164, 163);
+}
+
+
+@media (min-width: 1200px) {
+    .grid-container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 767px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+.titulo-container {
+    text-align: center;
+    background-color: rgb(99, 114, 109);
+    margin: 120px;
+    padding: 20px;
+    border: 3px solid;
 }
