--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style.css">
     <title>Diaris!</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Tu CSS personalizado -->
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
+<style>
+    body {
+        background-image: url('/static/img/periodico2.jpg');
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 <body>
-    <p>Mira les noticies de La Vanguardia:</p>
-    <ul>
-        <li><a href="/lavanguardia/deportes">Deportes</a></li>
-        <li><a href="/lavanguardia/politica">Política</a></li>
-        <li><a href="/lavanguardia/vida">Vida</a></li>
-    </ul>
-    <img src="/static/img/diaris.jpg" alt="Diaris" />
+    <div class="container-fluid" style="background-image: url('/static/img/periodico.png'); background-size: cover;">
+    </div>
+    <nav class="navbar navbar-dark bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Diarios</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/lavanguardia/deportes">Deportes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/lavanguardia/politica">Política</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/lavanguardia/vida">Vida</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/lavanguardia/cultura">Cultura</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/lavanguardia/gente">Gente</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <br></br>
+    <div class="container-sm">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/static/img/imagendeporte2.png" class="d-block w-100" alt="Diaris 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="/static/img/politica2.jpg" class="d-block w-100" alt="Diaris 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="/static/img/vida2.jpg" class="d-block w-100" alt="Diaris 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="/static/img/cultura.jpg" class="d-block w-100" alt="Diaris 4">
+                </div>
+                <div class="carousel-item">
+                    <img src="/static/img/gente2.jpg" class="d-block w-100" alt="Diaris 5">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
