--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,10 +26,10 @@ h1 {
 }
 
 .grid-item {
-    border: 1px solid #ccc;
+    border: 2px solid #2b200a;
     padding: 10px;
     border-radius: 5px;
-    background-color: rgb(161, 164, 163);
+    background-color: RGB(236, 217, 198);
 }
 
 
@@ -58,8 +58,9 @@ h1 {
 }
 
 .titulo-container {
+    font-family: "Courier New", monospace;
     text-align: center;
-    background-color: rgb(99, 114, 109);
+    background-color: rgb(217, 179, 140);
     margin: 120px;
     padding: 20px;
     border: 3px solid;
