--- a/templates/lavanguardia.html
+++ b/templates/lavanguardia.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="titulo-container">
-        <h1>La Vanguardia - <small>{{rss.feed.title}}</small></h1>
+        <h1>LA VANGUARDIA - <small>{{rss.feed.title}}</small></h1>
         <img src="{{rss.feed.image.url}}" alt="{{rss.feed.image.description}}"/>
     </div>
     <div class="grid-container">
